# video-editor

./: .gitignore  README.md  RELEASE.md  generate_revind_icon.py  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
scripts/: prepare-sidecars.mjs
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: export.rs  media.rs  mod.rs  project.rs
src-tauri/src/engine/: export.rs  ffmpeg.rs  filtergraph.rs  mod.rs  probe.rs  thumbnails.rs  timeline.rs
src/components/Clip/: ClipTrimmer.tsx
src/components/Inspector/: Inspector.tsx
src/components/MediaBin/: MediaBin.tsx
src/components/Preview/: Preview.tsx
src/components/Timeline/: ShortcutsHelp.tsx  Timeline.tsx
src/components/ui/: Button.tsx  Checkbox.tsx  Input.tsx  Select.tsx  Separator.tsx  Slider.tsx  Toaster.tsx
src/lib/: tauri.ts  types.ts  utils.ts  uuid.ts
src/stores/: projectStore.ts
src/styles/: globals.css
